client/src/SCSS/account/accountDropdown.scss
@import '../utils/variables';

.account-dropdown-component {
	.blurred-background {
		z-index: 1;
		position: absolute;
		left: 0;
		top: 0;
		background-color: black;
		opacity: 0.5;
		height: 100vh;
		width: 100vw;
		// Made visible using JS
		visibility: hidden;
	}

	.dropdown-container {
		z-index: 1;
		position: absolute;
		right: 0;
		border: 5px solid black;
		border-top: none;
		border-right: none;
		background: white;
		height: 300px;
		width: 235px;
		text-align: left;
		font-family: Arial, Helvetica, sans-serif;
	}

	// Used so that the padding does not affect the size of the dropdown-container
	.padded-container {
		padding: 15px 5px 5px 10px;
	}

	.account-info {
		display: block;
		margin-bottom: 3px;
	}

	.account-info--bold {
		font-weight: bold;
	}

	.underlined {
		text-decoration: underline;
	}

	.account-link-container {
		margin-top: 15px;
	}

	.account-link {
		display: block;
		margin-bottom: 3px;
		color: blue;
		font-style: bold;
		text-decoration: none;
		cursor: pointer;
	}
}

